# company-indexer

./: .env.example  .gitignore  CLAUDE.md  README.md  VISION.md  docker-compose.yml  docs.md  initial-description.md  initial-plan.md  mvp-plan.md  plan-jobs.md  plan-scrape.md  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: Collapsible.tsx  CostTag.tsx  Section.tsx  StatusBadge.tsx
frontend/src/lib/: format.ts  useDebounce.ts
frontend/src/pages/: CompaniesPage.tsx  CompanyPage.tsx  MapPage.tsx  sections.tsx
src/company_indexer/: config.py  db.py
src/company_indexer/api/: app.py  deps.py
src/company_indexer/api/routes/: companies.py  geocoding.py  jobs.py  pricing.py  (+2 more)
src/company_indexer/jobs/: candidates.py  extractor.py  orchestrator.py  resolver.py
src/company_indexer/llm/: website_resolver.py
src/company_indexer/models/: __init__.py  company.py  company_website.py  jobs.py  website_scrape.py  website_search.py
src/company_indexer/pdok/: client.py
src/company_indexer/pricing/: __init__.py  pricing.py
src/company_indexer/schemas/: company.py  company_website.py  jobs.py  website_scrape.py  website_search.py
src/company_indexer/scraper/: detect.py  discover.py  extract.py  fetch.py  headers.py  orchestrator.py  storage.py
src/company_indexer/scripts/: import_companies.py  seed_companies.py
src/company_indexer/serper/: client.py  excluded_domains.py
